k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webpage
spec:
  replicas: 4
  selector:
    matchLabels:
      app: webpage
  template:
    metadata:
      labels:
        app: webpage
    spec:
      containers:
      - name: webpage
        image: fabricioveronez/pagina-exemplo:blue
        ports:
        - containerPort: 80
