k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webpage
spec:
  selector:
    app: webpage
  ports:
  - port: 8080
    targetPort: 80
  type: LoadBalancer
