k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webpage-ingress
  namespace: my-app
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: webpage.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webpage
                port:
                  number: 8080
